WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293637
Fix TestWebKitAPI.WKNavigation.HTTPSFirstHTTPDowngradeAndSameSiteNavigation with site isolation enabled
https://bugs.webkit.org/show_bug.cgi?id=293637
Summary
Fix TestWebKitAPI.WKNavigation.HTTPSFirstHTTPDowngradeAndSameSiteNavigation w...
Alex Christensen
Reported
2025-05-27 14:02:35 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2025-05-27 14:04:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45960
EWS
Comment 2
2025-05-27 15:53:54 PDT
Committed
295474@main
(8f40020687cb): <
https://commits.webkit.org/295474@main
> Reviewed commits have been landed. Closing PR #45960 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-05-27 15:54:14 PDT
<
rdar://problem/152116289
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug