Fix TestWebKitAPI.WKNavigation.HTTPSFirstHTTPDowngradeAndSameSiteNavigation with site isolation enabled https://bugs.webkit.org/show_bug.cgi?id=293637

Reviewed by Matthew Finkel.

With site isolation enabled, we need to clear the provisional page when a provisional navigation fails
even if we are going to continue the load with site isolation enabled because otherwise processNavigatingFrom
will be incorrect in the lambda named continueWithProcessForNavigation and we will continue in the wrong
process which has not been set up to do loading for the domain we are navigating to.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didFailProvisionalLoadForFrameShared):

Canonical link: https://commits.webkit.org/295474@main